--- a/linguagem-de-programação/css/sidebar/style2.css
+++ b/linguagem-de-programação/css/sidebar/style2.css
@@ -50,57 +50,25 @@ a:focus {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
 #sidebar {
     width: 250px;
     position: fixed;
     top: 0;
-    left: -250px;
+    left: 0;
     height: 100vh;
     z-index: 999;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
-    overflow-y: scroll;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 #sidebar.active {
-    left: 0;
-}
-
-#dismiss {
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    background: #7386D5;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-#dismiss:hover {
-    background: #fff;
-    color: #7386D5;
-}
-
-.overlay {
-    display: none;
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 998;
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-}
-.overlay.active {
-    display: block;
-    opacity: 1;
+    margin-left: -250px;
 }
 
 #sidebar .sidebar-header {
@@ -181,8 +149,8 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-    width: 100%;
-    padding: 20px;
+    width: calc(100% - 250px);
+    padding: 40px;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
@@ -190,18 +158,28 @@ a.article:hover {
     right: 0;
 }
 
-.rotate {
-    animation: rotation 20s infinite linear;
-    opacity: 0.1;
-    position: fixed;
-    z-index: -1;
-  }
-  
-  @keyframes rotation {
-    from {
-      transform: rotate(0deg);
+#content.active {
+    width: 100%;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
     }
-    to {
-      transform: rotate(359deg);
+    #sidebar.active {
+        margin-left: 0;
     }
-  }
+    #content {
+        width: 100%;
+    }
+    #content.active {
+        width: calc(100% - 250px);
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+}
