--- a/desafio/views/login.ejs
+++ b/desafio/views/login.ejs
@@ -1,16 +1,50 @@
-<h1>Login</h1>
-<%if (messages.error) {%>
-    <%= messages.error %>
-    <%} %>
-<form action="/login" method="POST">
-<div>
-    <label for="email">email</label>
-    <input type="email" id="email" name="email" required>
-</div>
-<div>
-    <label for="password">password</label>
-    <input type="password" id="password" name="password" required>
-</div>
-<button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./Aperture_Science.svg">
+
+    <title>Agenda</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/css/tether.min.css'>
+    <link rel="stylesheet" href="./style.css">
+
+</head>
+<style>
+
+</style>
+
+<body>
+
+    <h1>Login</h1>
+
+    <form action="/login" method="POST" class="p-3 m-3">
+        <h2><%if (messages.error) {%>
+            <%= messages.error %>
+            <%} %></h2>
+        <div>
+            <label for="email">email</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+            <label for="password">password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button class="btn btn-dark" type="submit">Login</button>
+    </form>
+    <a href="/register">Register</a>
+
+    <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+</body>
+</html>
