--- a/desafio/views/register.ejs
+++ b/desafio/views/register.ejs
@@ -1,6 +1,32 @@
-<h1>Register</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./Aperture_Science.svg">
+
+    <title>Agenda</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/css/tether.min.css'>
+    <link rel="stylesheet" href="./style.css">
+
+</head>
+<style>
+
+</style>
+
+<body>
+
+    <h1>Register</h1>
 
 <form action="/register" method="POST">
+    <h2><%if (typeof name != "undefined" && name) {%>
+        <%= name %>
+        <%} %></h2>
 <div>
     <label for="name">name</label>
     <input type="text" id="name" name="name" required>
@@ -13,6 +39,17 @@
     <label for="password">password</label>
     <input type="password" id="password" name="password" required>
 </div>
-<button type="submit">Register</button>
+<button class="btn btn-dark" type="submit">Register</button>
 </form>
 <a href="/login">Login</a>
+
+    <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+</body>
+</html>
+
