--- a/desafio/public/style.css
+++ b/desafio/public/style.css
@@ -242,6 +242,12 @@ div.trans.color-white{
     transition: all 0.5s ease-in-out;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 /* #newContacts{
     z-index: 1000;
     position: absolute;
