--- a/desafio/views/login.ejs
+++ b/desafio/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Aperture_Science.svg">
+    <link rel="shortcut icon" href="/agenda/Aperture_Science.svg">
 
     <title>Agenda</title>
 
@@ -12,7 +12,6 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/css/tether.min.css'>
-    <link rel="stylesheet" href="./style.css">
 
 </head>
 <style>
@@ -20,24 +19,58 @@
 </style>
 
 <body>
-
-    <h1>Login</h1>
-
-    <form action="/login" method="POST" class="p-3 m-3">
-        <h2><%if (messages.error) {%>
-            <%= messages.error %>
-            <%} %></h2>
+    <div class="container">
+        <article class="card-body col-sm-4">
+            <h4 class="card-title text-center mb-4 mt-1">Log in</h4>
+            <hr>
+            <p class="text-danger text-center">
+                <%if (messages.error) {%>
+                    <%= messages.error %>
+                        <%} %>
+            </p>
+            <form action="/login" method="POST">
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fas fa-at"></i> </span>
+                        </div>
+                        <input class="form-control" placeholder="Email" type="email" id="email" name="email" required
+                            autocomplete="on">
+                    </div> <!-- input-group.// -->
+                </div> <!-- form-group// -->
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input class="form-control" placeholder="******" type="password" id="password" name="password"
+                            required autocomplete="off">
+                    </div> <!-- input-group.// -->
+                </div> <!-- form-group// -->
+                <div class="form-group">
+                    <button type="submit" class="btn btn-dark btn-block"> Login </button>
+                </div> <!-- form-group// -->
+                <p class="text-center"><a href="/register" class="btn btn-outline-primary">Cadastra-se</a></p>
+            </form>
+        </article>
+    </div>
+    <!-- <form action="/login" method="POST" class="p-3 m-3">
+        <h2>
+            <%if (messages.error) {%>
+                <%= messages.error %>
+                    <%} %>
+        </h2>
         <div>
             <label for="email">email</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required autocomplete="on">
         </div>
         <div>
             <label for="password">password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" required autocomplete="off">
         </div>
         <button class="btn btn-dark" type="submit">Login</button>
-    </form>
-    <a href="/register">Register</a>
+    </form> 
+    <a href="/register">Register</a>-->
 
     <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
@@ -47,4 +80,5 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
 </body>
+
 </html>
