--- a/desafio/public/style.css
+++ b/desafio/public/style.css
@@ -24,6 +24,14 @@ a:focus {
     transition: all 0.3s;
 }
 
+.a,
+.a:hover,
+.a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
 .navbar {
     padding: 15px 10px;
     background: #fff;
@@ -125,6 +133,11 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li .a:hover {
     color: #7386D5;
     background: #fff;
 }
